# Banco-Python-Dio

./: .gitignore  README.md  alembic.ini  create_db.py  database.db  main.py  pyproject.toml  requirements.txt
alembic/: README.md  env.py
alembic/versions/: 860e4e37669d_update.py  ce4f4e618919_add_abacate_column_to_client_table.py  da705bb019dc_add_abacate_column_to_client_table.py  e4e994642cd7_remove_abacate_column_to_client_table.py
docs/: class.drawio  class_diagram.drawio  punk.drawio
docs/diagrams/mauricio/: MER.drawio
src/controllers/: client.py
src/controllers/constant/: errors.py  integers.py  strings.py
src/controllers/funcs/: validats.py
src/models/: README.md  connection.py  tables.py
src/models/entities/: account.py  agency.py  bank.py  base.py  client.py
src/views/: __init__.py  index.py
src/views/components/: tittle_bar.py
src/views/configs/: screen.py
tests/models/: test_account.py
